# fastapi_udemy

./: README.md  alembic.ini  compose.yaml  main.py  pyproject.toml
alembic/: README  env.py
alembic/versions/: 4897c726eb00_add_phone_number_to_users_table.py  978b77f6be84_add_owner_id_to_todos_table_and_fk_to_.py  a99c2bfdaf8f_add_users_table.py  b12a66d76848_add_todos_table.py
examples/: example_001_fastapi_basics.py  example_002_fastapi_basics_with_validations.py  example_003_sqlite_connection.py  example_004_mysql_connection.py  example_005_pytest.py
templates/: home.html  layout.html  login.html  register.html
test/: test_admin.py  test_auth.py  test_main.py  test_todos.py  test_user.py  utils.py
todo/: database.py  main.py  models.py  oath2.py  utils.py
todo/models/: __init__.py  todo.py  user.py
todo/routers/: __init__.py  admin.py  auth.py  todo.py  user.py
todo/schemas/: __init__.py  todo.py  user.py
