[project]
name = "fastapi-udemy"
version = "0.1.0"
description = "FastAPI Udemy Course"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.17.1",
    "bcrypt==4.3.0",
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "passlib>=1.7.4",
    "psycopg>=3.2.12",
    "psycopg-binary>=3.2.12",
    "pydantic>=2.11.7",
    "pyjwt>=2.10.1",
    "pytest>=9.0.1",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.43",
    "uvicorn>=0.35.0",
]
